--- a/stylesheet.css
+++ b/stylesheet.css
@@ -129,3 +129,20 @@ name {
 span.highlight {
   background-color: #ffffd0;
 }
+
+.news-toggle-link {
+  color: #1772d0 !important;
+  text-decoration: none;
+  font-family: 'Lato', Verdana, Helvetica, sans-serif;
+  font-size: 14px;
+}
+
+.news-toggle-link:visited {
+  color: #1772d0 !important;
+  text-decoration: none;
+}
+
+.news-toggle-link:hover {
+  color: #f09228 !important;
+  text-decoration: none;
+}
